<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    tools:context=".Activity.Login_Activity">
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:textColor="#000"
        android:background="@drawable/edittext_bottomline"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/email"
        android:paddingLeft="10dp"
        android:textColor="#000"
        android:background="@drawable/edittext_bottomline"
        android:textSize="20sp"/>
    <CheckBox
        android:id="@+id/remembrtme_chk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:button="@drawable/ic_chekbox_active"
        android:padding="7dp"
        android:layout_marginLeft="10dp"
        android:textColor="#000"
        android:text="@string/remember_me"/>
    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_btn"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:textColor="#ffffff"
        android:layout_marginTop="70dp"
        android:textAllCaps="false"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="10dp"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"/>
    <Button
        android:id="@+id/signup"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_btn"
        android:text="@string/signup"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/or"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textSize="20sp"/>


</RelativeLayout>