<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    tools:context=".Activity.RegisterActivity">
    <ProgressBar
        android:id="@+id/simpleprogressbar"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:textColor="#000"
        android:background="@drawable/edittext_bottomline"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@id/fullname"
        android:layout_marginBottom="5dp"
        android:textColor="#000"
        android:paddingLeft="10dp"
        android:background="@drawable/edittext_bottomline"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/email"
        android:paddingLeft="10dp"
        android:textColor="#000"
        android:background="@drawable/edittext_bottomline"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/password"
        android:paddingLeft="10dp"
        android:textColor="#000"
        android:background="@drawable/edittext_bottomline"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_below="@id/confirmpassword"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:textColor="#000"
        android:background="@drawable/edittext_bottomline"
        android:textSize="20sp"/>
    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:textColor="#000"
        android:spinnerMode="dropdown"
        android:layout_below="@id/phone"
        android:background="@drawable/edittext_bottomline"
        />
    <Spinner
        android:id="@+id/city_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:textColor="#000"
        android:layout_below="@id/country_spinner"
        android:spinnerMode="dropdown"
        android:background="@drawable/edittext_bottomline"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/signup_btn"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_btn"
        android:text="@string/signup"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/city_spinner"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:textSize="20sp"/>
</RelativeLayout>